tests/functional/lang/parse-fail-mixed-nested-attrs2.err.exp
error: attribute 'y' already defined at /pwd/parse-fail-mixed-nested-attrs2.nix:3:9
       at /pwd/parse-fail-mixed-nested-attrs2.nix:2:3:
            1| {
            2|   x.y.y = 3;
             |   ^
            3|   x = { y.y= 3; z = 3; };
